--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -29,9 +29,10 @@ window:
   # Number of lines/columns (not pixels) in the terminal. The number of columns
   # must be at least `2`, while using a value of `0` for columns and lines will
   # fall back to the window manager's recommended size.
-  #dimensions:
-  #  columns: 0
-  #  lines: 0
+  opacity: 0.9 
+  dimensions:
+    columns: 120  
+    lines: 40 
 
   # Window position (changes require restart)
   #
@@ -150,7 +151,7 @@ font:
     #style: Bold Italic
 
   # Point size
-  size: 10.5
+  size: 8
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
@@ -339,7 +340,6 @@ colors:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.92
 
 #selection:
   # This string contains all characters that are used as separators for
